Added documentation and tests for hrf functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,7 @@
 
 export(autohrf)
 export(convolve_events)
-export(convolve_hrf)
-export(create_boynton_hrf)
-export(create_spm_hrf)
-export(downsample)
 export(plot_best_models)
-export(plot_events)
 export(plot_fitness)
 export(print_best_models)
 export(run_model)
@@ -16,3 +11,4 @@ import(ggplot2)
 import(gtools)
 import(lubridate)
 import(stats)
+import(utils)
