--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,4 +16,6 @@ Imports:
     ggplot2 (>= 3.3.5),
     gtools (>= 3.9.2),
     lubridate (>= 1.8.0)
+Suggests: 
+    testthat (>= 3.1.3)
 RoxygenNote: 7.1.2
