Added tests and a vignette for manual inspection of models. Added a function for plotting manually constructed models.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,16 @@ export(autohrf)
 export(convolve_events)
 export(plot_best_models)
 export(plot_fitness)
+export(plot_model)
 export(print_best_models)
 export(run_model)
 import(cowplot)
 import(ggplot2)
 import(gtools)
-import(lubridate)
 import(stats)
 import(utils)
+importFrom(lubridate,day)
+importFrom(lubridate,hour)
+importFrom(lubridate,minute)
+importFrom(lubridate,second)
+importFrom(lubridate,seconds_to_period)
