--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,11 @@ Imports:
     ggplot2 (>= 3.3.5),
     gtools (>= 3.9.2),
     lubridate (>= 1.8.0)
-Suggests: 
-    testthat (>= 3.1.3)
+Suggests:
+    knitr (>= 1.38),
+    testthat (>= 3.1.3),
+    vdiffr (>= 1.0.4)
+VignetteBuilder: knitr
 RoxygenNote: 7.1.2
+URL: https://github.com/demsajure/autohrf
+BugReports: https://github.com/demsajure/autohrf/issues
