--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,19 @@
 
 export(autohrf)
 export(evaluate_model)
+export(get_best_models)
 export(plot_best_models)
 export(plot_fitness)
 export(plot_model)
-export(print_best_models)
 import(cowplot)
 import(ggplot2)
 import(gtools)
 import(stats)
+import(tidyverse)
 import(utils)
 importFrom(lubridate,day)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
 importFrom(lubridate,second)
 importFrom(lubridate,seconds_to_period)
+importFrom(magrittr,"%>%")
