Fixed plot_model when selecting ROIs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ import(cowplot)
 import(ggplot2)
 import(gtools)
 import(stats)
-import(tidyverse)
 import(utils)
+importFrom(dplyr,filter)
 importFrom(lubridate,day)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
