--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(plot_best_models)
 export(plot_fitness)
 export(plot_model)
 import(cowplot)
+import(foreach)
 import(ggplot2)
 import(gtools)
 import(stats)
