Parallelism now works.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: autohrf
 Type: Package
 Title: An R Package for Generating Data-Informed GLM Models in Task-Based fMRI Data Analysis
-Version: 0.6.0
+Version: 0.6.1
 Authors@R:
     c(person("Jure", "Demšar", , "jure.demsar@fri.uni-lj.si", c("cre", "aut")),
     person("Nina", "Purg", , "nina.purg@ff.uni-lj.si", c("aut")),
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     cowplot (>= 1.1.1),
+    doParallel (>= 1.0.17),
     dplyr (>= 1.0.8),
     foreach (>= 1.5.2),
     ggplot2 (>= 3.3.5),
