--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(plot_events)
 export(plot_fitness)
 export(plot_model)
 export(run_model)
+import(RColorBrewer)
 import(cowplot)
 import(doParallel)
 import(foreach)
@@ -25,7 +26,9 @@ import(ggplot2)
 import(gtools)
 import(stats)
 import(utils)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(lubridate,day)
 importFrom(lubridate,hour)
 importFrom(lubridate,minute)
