--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: autohrf
 Type: Package
 Title: An R Package for Generating Data-Informed GLM Models in Task-Based fMRI Data Analysis
-Version: 0.7.0
+Version: 1.0.0
 Authors@R:
     c(person("Jure", "Demšar", , "jure.demsar@fri.uni-lj.si", c("cre", "aut")),
     person("Nina", "Purg", , "nina.purg@ff.uni-lj.si", c("aut")),
@@ -23,8 +23,7 @@ Imports:
     RColorBrewer (>= 1.1)
 Suggests:
     knitr (>= 1.38),
-    testthat (>= 3.1.3),
-    vdiffr (>= 1.0.4)
+    testthat (>= 3.1.3)
 VignetteBuilder: knitr
 RoxygenNote: 7.2.0
 URL: https://github.com/demsajure/autohrf
