--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,5 @@ Suggests:
     testthat (>= 3.1.3)
 VignetteBuilder: knitr
 RoxygenNote: 7.2.0
-URL: https://github.com/demsajure/autohrf
-BugReports: https://github.com/demsajure/autohrf/issues
+URL: https://github.com/demsarjure/autohrf
+BugReports: https://github.com/demsarjure/autohrf/issues
