--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,10 +23,9 @@ Imports:
     RColorBrewer (>= 1.1)
 Suggests:
     knitr (>= 1.38),
-    testthat (>= 3.1.3)
+    testthat (>= 3.1.3),
+    tidyverse (>= 1.3.0)
 VignetteBuilder: knitr
 RoxygenNote: 7.2.0
 URL: https://github.com/demsarjure/autohrf
 BugReports: https://github.com/demsarjure/autohrf/issues
-Depends: 
-    R (>= 2.10)
